# esp32-homekit-devices

./: .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md  partitions_hap_epaper.csv  sdkconfig.defaults  sdkconfig.defaults.epaper  sdkconfig.defaults.local.epaper-v2.example  sdkconfig.defaults.local.example
components/codec_board/: codec_init.c
devices/: CMakeLists.txt  README.en.md  README.md  device.c  idf_component.yml
devices/common/: dashboard_cjk16_font.inc  dashboard_poem_pinyin_table.inc  display_support.c  dual_panel_display.c  dual_panel_display.h  gpio_output.c  gpio_output.h  multi_gpio_output.c  multi_gpio_output.h
devices/dashboard/: README.en.md  README.md  dashboard_buttons.c  dashboard_buttons.h  dashboard_content.c  dashboard_content.h  dashboard_device.c  dashboard_device.h  dashboard_http.c  dashboard_http.h  dashboard_poem.c  dashboard_poem.h  dashboard_weather.c  dashboard_weather.h
devices/epaper/: README.en.md  README.md  epaper_audio.c  epaper_audio.h  epaper_board.c  epaper_board.h  epaper_button.c  epaper_button.h  epaper_device.c  epaper_device.h  epaper_display.c  epaper_display.h
devices/include/: device.h  display_support.h
devices/light/: README.en.md  README.md  light_device.c  light_device.h
devices/outlet/: README.en.md  README.md  outlet_device.c  outlet_device.h
docs/: README.en.md  README.md  core.en.md  core.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
scripts/: README.en.md  README.md  build-device.sh  build-light.sh  build-outlet.sh  flash-dashboard.ps1  flash-dashboard.sh  flash-device.ps1  flash-device.sh  flash-light.sh  flash-outlet.sh  idf-run.ps1  idf-run.sh  monitor.sh
skills/: README.en.md  README.md
skills/vibe-coding/: SKILL.md
skills/vibe-coding/agents/: openai.yaml
skills/vibe-coding/references/: project.en.md  project.md
